[package]
name = "epp-lm-analysis-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
toml = "^0.8.9"
serde_derive = "1.0"
simple-log = "1.5.1"
bytes = "1.0"
zip = "0.6.6"
webp = "0.2.6"
image = { version = "0.24.8" }
